--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximun-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>vue-smail-mall</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+  <script>
+  let htmlWidth = document.documentElement.clientWidth || document.body.clientWidth
+  let htmlDom = document.getElementsByTagName('html')[0]
+
+  if(htmlWidth>750){htmlWidth=750}
+  htmlDom.style.fontSize = htmlWidth/20 + 'px'
+  
+  
+  </script>
   </body>
 </html>
